@@ -1,5 +1,10 @@
 2008-02-09  Sven Herzberg  <sven@imendio.com>
 
+	* src/net/client.c: (network_client_init),
+	(network_client_class_init): use G_DEFINE_TYPE
+
+2008-02-09  Sven Herzberg  <sven@imendio.com>
+
 	* src/net/game.c: (network_game_init): use G_DEFINE_TYPE
 
 2008-02-09  Sven Herzberg  <sven@imendio.com>
